2007-03-15  Vitaly Alexeev <tishka92@yahoo.com>
	
	* base/tu_memdebug.h: added simplified API for using Stackwalker
	* base/Stackwalker.(cpp,h): Stackwalker body
	* gameswf/gameswf_test_ogl.cpp: Stackwalker is used for memory leaks
	testing (WIN32 only)
	Thanks Thatcher Ulrich for valuable advice

2007-03-15  Vitaly Alexeev <tishka92@yahoo.com>
	
	* gameswf/gameswf_test_ogl.cpp: optimized progress bar perfomance
	* gameswf/gameswf_impl.cpp,
	* gameswf/gameswf_movie_def.(cpp,h): fixed progress bar broken before

2007-03-15  Vitaly Alexeev <tishka92@yahoo.com>
	
	* a lot of files: gameswf_impl is divided into 2 parts:
	gameswf_impl & gameswf_movie_def

2007-03-15  Vitaly Alexeev <tishka92@yahoo.com>

	* base/image.(cpp,h): added ~image_base(),
	moved ~rgb(), ~rgba() and ~alpha() code to ~image_base()
	* gameswf/gameswf.h,
	* gameswf/gameswf_render.h: 
	* gameswf/gameswf_render_handler_ogl.h: 
	added ~bitmap_info() that memory did not leak,
	removed useless delete_bitmap_info() & delete_YUV_video(),
	layout_row() ==> layout_alpha()
	* gameswf/gameswf_as_classes/as_netstream.cpp: fixed memory leaks

2007-03-13  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf.h,
	* gameswf/gameswf_render.(cpp,h),
	* gameswf/gameswf_render_handler_ogl.cpp:
	The beginning of job on the runing create_library_movie() & 
	create_library_movie_inst in separate threads. Advance thread is
	the main thread therefore in the create_library_movie thread opengl
	is not accessible and we can't use opengl functions for creating
	textures. We save image in system memory and then layout it to video
	memory when it's required.
	* base/image.(cpp,h): added image type to image_base (rgb, rgba, ...)
	* base/tu_opengl_includes.h: added wglGetCurrentContext() declaration,
	it is used to find out if opengl is accessible
	
2007-03-13  Vitaly Alexeev <tishka92@yahoo.com>

	* base/tu_queue.h: added destructor which pops elements from queue