@@ -1,5 +1,17 @@
 2007-03-15  Vitaly Alexeev <tishka92@yahoo.com>
 	
+	* gameswf/gameswf_movie_def.(cpp,h),
+	* gameswf/gameswf_mutex.h,
+	* gameswf/gameswf_impl.cpp,
+	* gameswf/gameswf_root.cpp:
+	The job on the runing create_library_movie() & 
+	create_library_movie_inst in separate threads is finished.
+	Now .swf files are loaded much more quickly. I am assured that
+	there are a bugs. It is not terrible :-). We shall work & fix bugs
+	* gameswf/gameswf_test_ogl.cpp: progress bar is switched off (useless now)
+
+2007-03-15  Vitaly Alexeev <tishka92@yahoo.com>
+	
 	* base/tu_memdebug.h: added simplified API for using Stackwalker
 	* base/Stackwalker.(cpp,h): Stackwalker body
 	* gameswf/gameswf_test_ogl.cpp: Stackwalker is used for memory leaks
